--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@packages/shared": "file:../packages/packages-shared-1.0.0.tgz",
     "@prisma/client": "^6.12.0",
+    "@simplewebauthn/server": "^13.1.2",
     "argon2": "^0.43.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
