--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.14.0",
     "@hookform/resolvers": "^5.1.1",
     "@packages/shared": "file:../packages/packages-shared-1.0.0.tgz",
+    "@simplewebauthn/browser": "^13.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
