--- a/api/package.json
+++ b/api/package.json
@@ -5,18 +5,19 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "index.ts",
+  "main": "dist/index.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "vite build",
-    "dev": "prisma generate && nodemon -L",
-    "start": "npm run build && prisma generate && node ./dist/index.js",
+    "dev": "nodemon -L",
+    "start": "node /app/dist/index.js",
     "lint": "npx eslint '**/*.{js,ts}'",
     "format": "npx prettier --write --log-level=warn './**/*.{js,ts,json}'",
     "preinstall": "npx typesync || :",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
     "@packages/shared": "file:../packages/packages-shared-1.0.0.tgz",
@@ -61,7 +62,7 @@
     "eslint-plugin-import": "^2.31.0",
     "globals": "^16.2.0",
     "prettier": "^3.5.3",
-    "tsx": "^4.20.3",
+    "tsx": "^4.20.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1"
   }
