--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,11 +6,11 @@
     "module": "ES2022" /* Specify what module code is generated. */,
     "rootDir": "./" /* Specify the root folder within your source files. */,
     "moduleResolution": "Bundler" /* Specify how TypeScript looks up a file from a given module specifier. */,
-    
+
     "paths": {
       "@/*": ["./src/*"],
     },
-    "noEmit": true /* Disable emitting files from a compilation. */,
+    "noEmit": false /* Disable emitting files from a compilation. */,
     "baseUrl": ".",
     "outDir": "dist" /* Specify an output folder for all emitted files. */,
     "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
