--- a/docker/api/Dockerfile.prod
+++ b/docker/api/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:24-bullseye-slim
+FROM node:24-bookworm-slim
 
 # 環境変数設定
 ENV NODE_ENV="production"
@@ -9,6 +9,11 @@ WORKDIR /app
 COPY ./api .
 COPY ./packages ../packages
 
+RUN apt update && \
+    apt install -y build-essential python3 # argon2導入のため
+
+RUN cp .env.example .env
 RUN npm install
+RUN npx vite build
 
 CMD ["npm", "start"]
