--- a/docker/front/Dockerfile.prod
+++ b/docker/front/Dockerfile.prod
@@ -6,17 +6,10 @@ ENV NODE_ENV="production"
 
 # アプリケーションディレクトリを作成する
 WORKDIR /app
-
-# COPY ./front/package*.json .
 COPY front .
 COPY ./packages ../packages
 
-# RUNはimageのビルド時に実行
-RUN apt update && \
-    apt install -y build-essential python3 # argon2導入のため
-
 RUN npm install 
-
 RUN npm run build
 
 # deploy stage
@@ -28,6 +21,8 @@ COPY --from=builder /app/dist .
 
 RUN rm -rf /etc/nginx/conf.d/
 COPY docker/front/nginx.conf /etc/nginx/conf.d/
+
+EXPOSE 5173
 
 # CMDはコンテナの起動時に実行されるデフォルトコマンド
 CMD ["nginx", "-g", "daemon off;"]
