ブラウザアクセスのポートを5173から80に変更

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=jsapp
 DATABASE_URL="postgres://postgres:password@192.168.100.100:5432/jsapp"
 PORT=3333
-FRONT_BASE_URL=http://localhost:5173
+FRONT_BASE_URL=http://localhost
 SESSION_SECRET=jsapp-secret
 COOKIE_SECRET=jsapp-cookie-secret
 JWT_SECRET=jsapp-secret
