--- a/docker/front/nginx.conf
+++ b/docker/front/nginx.conf
@@ -7,6 +7,11 @@ server {
         index index.html index.htm;
         try_files $uri /index.html;
     }
+    location /api {
+        proxy_pass http://api:3333/api;  # サービス名で指定
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
